Bug 1704046 - Prevent popup buttons from disappearing in some Windows high-contrast themes. r=desktop-theme-reviewers,harry
This selector was overriding a popup-specific one in such a way that it broke
the exact thing it's intended to fix; the popup buttons derive their
background color from the foreground color, and in some Windows 10 high-
contrast themes, HighlightText is black, so the effect is that every part of
the button is black and therefore it basically disappears when this rule
matches. Replacing `:is` with `:where` reduces the specificity enough that
this rule can be overridden and the button gets reasonable colors.

Differential Revision: https://phabricator.services.mozilla.com/D112103

UltraBlame original commit: 07ab616217842d412cdcb53d3cb038fef505fa56

--- a/toolkit/themes/windows/global/button.css
+++ b/toolkit/themes/windows/global/button.css
@@ -1,14 +1,14 @@
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-
-
-
-
-
-
+/* ===== button.css =====================================================
+  == Styles used by the XUL button element.
+  ======================================================================= */
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
-
+/* :::::::::: button :::::::::: */
 
 button {
   margin: 1px 5px 2px;
@@ -27,30 +27,30 @@ button {
   text-align: center;
 }
 
-
+/* .......... focused state .......... */
 
 button:-moz-focusring {
   outline: 1px dotted;
   outline-offset: -3px;
 }
 
-
+/* .......... default/hover/focused state .......... */
 
 @media (-moz-windows-default-theme: 0) {
   @media (-moz-windows-compositor) {
-    
-
-
-
-
-
-    button:is([default="true"],:hover,:focus):not(:active,[disabled="true"],[open="true"],[checked="true"]) {
+    /* This is for high-contrast black and white themes on Windows 8 and later,
+       where the native appearance renders a different background (which
+       appears to be equivalent to the Highlight color) if the button is in the
+       default, hovered or focused state. However, if these states overlap with
+       the active, disabled, open or checked state, the appearance reverts back
+       to the default background. */
+    button:where([default="true"],:hover,:focus):not(:active,[disabled="true"],[open="true"],[checked="true"]) {
       color: HighlightText;
     }
   }
 }
 
-
+/* .......... disabled state .......... */
 
 button[disabled="true"] {
   color: GrayText;
@@ -63,7 +63,7 @@ button[disabled="true"] {
   }
 }
 
-
+/* ::::: menu buttons ::::: */
 
 .button-menu-dropmarker {
   appearance: none;
@@ -74,7 +74,7 @@ button[disabled="true"] {
   height: 12px;
 }
 
-
+/* ::::: plain buttons ::::: */
 
 button.plain {
   margin: 0 !important;
